# lab-instruments

./: .gitlab-ci.yml  Manifest.toml  Project.toml  README.md  flake.nix  pyproject.toml
src/lab_instruments/: Manifest.toml  Project.toml  __init__.py  delay_gen.py  h5_utils.py  laser.py  load_qc.py  pm400.py  tlccs.py  zaber.py
tests/: test_delay_gen.py  test_laser_api.py  test_power_meter.py  test_qc_init.py
tests/qc_extras/: photon_cnt_tcspc_xem7310-a200_v1.7.bit  tcspc.json
